feat(auth): standardize error handling with RFC 9457 + documentation
- Implements ApiError using the RFC 9457 (Problem Details) structure
- Updates GlobalExceptionHandler to use centralized ErrorType enum
- Adds ErrorType enum with predefined error URIs and titles
- Creates public endpoint GET /docs/errors to expose all supported error types
- Documents error responses in Swagger for the /api/auth/login endpoint
- Adds unit test to validate the error documentation structure

Motivation: standardize API error responses to improve frontend integration, external API compatibility, and traceability, following REST best practices.